Cadastro de jogadores atualizado (com opção de escolher pelo nome da equipe)

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,8 +2,10 @@
     ViewData["Title"] = "Página Inicial";
 }
 
+
 <div class="banner">
-    <a asp-area="Link para o cadastro" asp-controller="Equipe" asp-action="Index" class="btn gradient">INSCREVA-SE</a>
+    <a asp-area="Link para o cadastro de equipes" asp-controller="Equipe" asp-action="Index" class="btn gradient">CADASTRAR EQUIPES</a>
+    <a asp-area="Link para o cadastro de jogadores" asp-controller="Jogador" asp-action="Index" class="btn gradient">CADASTRAR JOGADORES</a>
 </div>
 
 <div class="sobre">
