--- a/Views/Jogador/Index.cshtml
+++ b/Views/Jogador/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="titulo_pagina">
-    <h1>cadastro de jogador</h1>
+    <h1>cadastro de @ViewData["Title"]</h1>
 </div>
 
 <form class="cadastro" method="POST" action='@Url.Action("Cadastrar")'>
@@ -16,12 +16,28 @@
 
     <div class="campo">
         <label>ID da Equipe</label>
-        <input type="text" name="IdEquipe">
+        <select name="IdEquipe" id="IdEquipe">
+            <option value=0>Selecione uma opção abaixo aí bro...</option>
+            @foreach (var item in ViewBag.Equipes)
+            {
+                <option value="@item.IdEquipe">@item.Nome</option>
+            }
+        </select>
     </div>
 
     <div class="campo">
         <label>Nome</label>
         <input type="text" name="Nome">
+    </div>
+
+    <div class="campo">
+        <label>Email</label>
+        <input type="text" name="Email">
+    </div>
+
+    <div class="campo">
+        <label>Senha</label>
+        <input type="password" name="Senha">
     </div>
 
     <button class="gradient btn" type="submit">Cadastrar</button>
@@ -30,8 +46,8 @@
 <table class="table table-striped table-responsive"> 
     <thread> 
         <th>ID de Jogador</th> 
-        <th>ID da Equipe</th>
         <th>Nome</th>
+        <th>Email</th>
     </thread>
 
     <tbody> 
@@ -39,9 +55,9 @@
         {
             <tr> 
                 <td>@item.IdJogador</td> 
-                <td>@item.IdEquipe</td>
                 <td>@item.Nome</td>
-                <td><a asp-area="Link para excluir um jogador" asp-controller="Jogador" asp-action="Excluir" asp-route-id="@item.IdJogador">Excluir</a></td>
+                <td>@item.Email</td>
+                @* <td><a asp-area="Link para excluir um jogador" asp-controller="Jogador" asp-action="Excluir" asp-route-id="@item.IdJogador">Excluir</a></td> *@
             </tr>
         }
     </tbody>
