--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,10 +24,17 @@
             </div>
             <nav id="menu">
                 <ul>
-                    <li><a asp-area="Voltar para o início" asp-controller="Home" asp-action="Index" title="voltar para a página inicial">INÍCIO</a></li>
+                    <li><a asp-area="Voltar para o início" asp-controller="Home" asp-action="Index" title="Voltar para a página inicial">INÍCIO</a></li>
                     <li><a href="#horarios" title="Ir até a sessão de horários das partidas">HORÁRIOS</a></li>
                     <li><a href="#resultados" title="Ir até a sessão de resultados das partidas">RESULTADOS</a></li>
                     <li><a href="#noticias" title="Ir até a sessão de notícias">NOTÍCIAS</a></li>
+                    @if(ViewBag.UserName != null){
+                        <li style="color: #d5379b">Olá @ViewBag.UserName !</li>
+                        <li><a asp-controller="Login" asp-action="Logout" title="Desconectar da conta">DESCONECTAR</a></li>
+
+                    }else{
+                        <li><a asp-controller="Login" asp-action="Index" title="Entrar na página de Login">LOGIN</a></li>
+                    }
                     <li><a href="#" title="buscar conteudo no site"><i class="fas fa-search"></i></a></li>
                 </ul>
             </nav>
